--- a/public/templates/layouts/admin-master.html
+++ b/public/templates/layouts/admin-master.html
@@ -36,6 +36,7 @@
             <a href="/admin/wallets">资金管理</a>
             <a href="/admin/positions">账户仓位</a>
             <a href="/admin/order">交易委托</a>
+            <a href="/admin/pm2">系统</a>
         </div>
         <div style="float: right;">
             <a href="/admin">Admin</a>
