--- a/public/templates/admin/trade.html
+++ b/public/templates/admin/trade.html
@@ -1,9 +1,45 @@
 {% extends "layouts/admin-master.html" %} 
+{% block header%}
+
+<link href="/css/admin.css" rel="stylesheet">
+<style type="text/css">
+#report
+{
+  font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+  width:107%;
+  border-collapse:collapse;
+}
+
+#report td, #positions th 
+{
+  font-size:1em;
+  border:1px solid #98bf21;
+  padding:3px 7px 2px 7px;
+}
+
+#report th 
+{
+  font-size:1.1em;
+  text-align:left;
+  padding-top:5px;
+  padding-bottom:4px;
+  background-color:#A7C942;
+  color:#ffffff;
+}
+
+#report tr.alt td 
+{
+  color:#000000;
+  background-color:#EAF2D3;
+  min-width: 120px;
+}
+</style>
+{%endblock%}
 {% block body %}
 <div>
     <h3>委托列表</h3>
     <div>
-        <div style="width: 1044px; padding:2px; background-color: #C2DAFA;">  
+        <div style="width: 1020px; padding:2px; background-color: #C2DAFA;">  
             site:
             <select id="inquirysite" name="sites" data-group="1" >
             </select>&nbsp;&nbsp;
@@ -35,11 +71,10 @@
             <label><input type="checkbox" id="showAll">包含已撤销委托</label>
             <a href="javascript:void(0)" id="showExceptionOrders">异常委托单</a>
 
-            <input type="button" id="btnReport" value="展开" style="float:right">
+            <input type="button" id="btnReport" value="隐藏" style="float:right">
         </div>
-            <div id="report" style="width: 1044px;"> 
-                
-            </div>
+            <table id="report">
+            </table>
 
         <div id="FlexiGrid_ContentDiv" onload="goPage(1,10);">
             <table id="FlexiGrid_ContentTable" style="display: none;">
@@ -67,7 +102,6 @@
     var _business = {{ business | safe }};
     var _bargainAmountSum = {{ bargainAmountSum | safe }}; //e.g //{"_id":{"site":"bitfinex","side":"buy","symbol":"eos#btc_1w"},"bargainAmount":400,"total":1600000,"sum":400}
     var _currentOperateLog;
-    var _symbolAmounts = []; // { site: "",symbol: "",amount: 234,avavgPrice: 123, plusAmount: 1,minusAmount: -1 }
     
     $(function () {
         showReports();
@@ -85,8 +119,6 @@
             minuteStep: 5,
             language:'zh-CN',
             autoclose:true
-        // }).on("click",function(){
-        //     $("#datetimeStart").datetimepicker("setEndDate",$("#datetimeEnd").val())
         });
         $("#datetimeEnd").datetimepicker({
             format:'yyyy-mm-dd hh:ii',
@@ -137,9 +169,7 @@
         });
         
         $('#btnSearch').click(function(){
-            _symbolAmounts =[];
             $("#report").empty();
-            // showReports();
 
             // console.log($("#datetime").val());
             var newParams = [
@@ -153,11 +183,10 @@
             $("#FlexiGrid_ContentTable").flexReload();
         });
 
-        $("#report").hide();
 
         $("#btnReport").click(function(){
             $("#report").toggle('slow');
-            $(this).val($(this).val()=="展开"?"隐藏":"展开");
+            $(this).val($(this).val()=="隐藏"?"展开":"隐藏");
         })
 
         $('#showAll').change(function(){
@@ -185,7 +214,7 @@
         };
 
         var option = {
-            width: 1044,
+            width: 1020,
             height: 'auto',
             data: initData,
             autoPager: false,//分页菜单栏
@@ -195,17 +224,17 @@
             showLoading: false,
             showMessageOnRowClicked: true,
             url: '/admin/trade/list',
-            colModel: [
+            colModel: [ 
                 { display: "交易网站", name: "site",type: 0,visible: true, width: "80", sortable: true,align:"left"},
                 { display: "交易品种", name: "symbol",type: 0,visible: true, width: "80", sortable: true,align: "left" },
                 { display: "委托时间",name: "created", type: 0,visible: true,width: "140",sortable: true,align: "left" },
                 { display: "委托类型",name: "type", type: 0,visible: true,width: "80",sortable: true,align: "left" },
                 { display: "交易类型",name: "side", type: 0,visible: true,width: "80",sortable: true,align: "left" },
                 { display: "委托数量",name: "amount", type: 0,visible: true,width: "100",sortable: true,align: "left" },
-                { display: "委托价格",name: "price", type: 0,visible: true,width: "100",sortable: true,align: "left" },
+                { display: "委托价格",name: "price", type: 0,visible: true,width: "100",sortable: true,align: "left",process:formatMoney },
                 { display: "已成交",name: "bargainAmount", type: 0,visible: true,width: "80",sortable: true,align: "left" },
-                { display: "成交均价",name: "avgPrice", type: 0,visible: true,width: "100",sortable: true,align: "left" },
-                { display: "委托状态",name: "status", type: 0,visible: true,width: "80",sortable: true,align: "left" },
+                { display: "成交均价",name: "avgPrice", type: 0,visible: true,width: "100",sortable: true,align: "left",process:formatMoney },
+                { display: "委托状态",name: "status", type: 0,visible: true,width: "80",sortable: true,align: "left" }                
             ],
             //分页页码
             onInited: flexiGridInited,
@@ -218,12 +247,12 @@
             columnsFixed: true,
             checkCell: {
                 showCheckAll: true,
-                width: "25"
+                width: "100"
             },
             gridClass: "bbit-grid",
             bootStrapSupported: false,
             resizable: false,
-            showTableToggleBtn: false,
+            showTableToggleBtn: true, 
             usepager: true, //是否分页
             useRp: true,    //是否可动态设置分页显示的结果数
             rp: 10,  //每页默认的结果数
@@ -233,6 +262,7 @@
             rpOptions: [10,20,30],  //可选择设定的每页结果数
             newp: 1,    //自定义翻页事件,定义刷新后第一页停留在哪个位置
             selectedonclick: false
+            
         };
         
         $("#FlexiGrid_ContentTable").flexigrid(option);
@@ -251,13 +281,14 @@
         var middle = 0; //总价
         var multipleWarehouse = 0; //多仓
         var shortPosition = 0; //空仓
-        
+        var _symbolAmounts = [];// { site: "",symbol: "",amount: 234,avavgPrice: 123, plusAmount: 1,minusAmount: -1 }
         for(var i = 0,l =_bargainAmountSum.length; i< l ;i++){
+
             amount = (_bargainAmountSum[i]._id.side=="buy"?_bargainAmountSum[i].bargainAmount:-_bargainAmountSum[i].bargainAmount);
 
             middle = _bargainAmountSum[i].total;
 
-            var symbolItem = getItem(_bargainAmountSum[i]._id.site,_bargainAmountSum[i]._id.symbol); 
+            var symbolItem = getItem(_bargainAmountSum[i]._id.site,_bargainAmountSum[i]._id.symbol,_symbolAmounts); 
             symbolItem.amount += amount;
             symbolItem.middle += middle;
 
@@ -266,34 +297,32 @@
             } else{ 
                 symbolItem.shortPosition += amount;
             }
+            
         }
 
-        var arr= []; // {eos#btc,btc#cny,btc#usd}
-        var result = {};// {[eos#btc:amount:400 data:Array(1)0:{site: "okex", symbol: "eos#btc", amount: 400, profit: 2000, multipleWarehouse: 400, …} multipleWarehouse:400 profit:2000 shortPosition:0]}
+        var arr= [];
+        var result = {}; 
         
         for (var i = 0; i < _symbolAmounts.length; i++) {
-            if(arr.indexOf(_symbolAmounts[i].symbol) == -1){
+            if(arr.indexOf(_symbolAmounts[i].symbol)==-1){
                 arr.push(_symbolAmounts[i].symbol);
             }
         }
-        
-
         for (var i = 0; i < arr.length; i++) {
             var amount = 0;
             var profit = 0;
             var multipleWarehouse = 0;
-            var shortPosition = 0;
-
+            var shortPosition =0;
             result[arr[i]] = {
-                amount: 0,
-                multipleWarehouse : 0,
-                shortPosition : 0,
-                profit : 0,
-                data : []
+                    amount: 0,
+                    multipleWarehouse : 0,
+                    shortPosition : 0,
+                    profit : 0,
+                    data : []
             };
-
+            
             for (var j = 0; j < _symbolAmounts.length; j++) {
-                if(_symbolAmounts[j].symbol == arr[i]) {
+                if(_symbolAmounts[j].symbol==arr[i]){
                     amount += _symbolAmounts[j].amount;
                     multipleWarehouse += _symbolAmounts[j].multipleWarehouse;
                     shortPosition +=  _symbolAmounts[j].shortPosition;
@@ -305,35 +334,30 @@
                     result[arr[i]].profit = profit;
                     result[arr[i]].data.push(_symbolAmounts[j]);
                 }
+                
+            }
+           
+        }
+        
+        var source = [];
+        source.push('<tr><th>币种</th><th>交易网站</th><th colspan="3">数量</th></tr>');
+        for(var key in result ){
+
+             //result[key].profit需要正数转负数
+            for(var i = 0; i<result[key].data.length;i++){
+                source.push('<tr>');
+                if(i == 0){
+                    source.push(w.format('<td rowspan="{0}">{1}<br/>总利润：{2}</td>',result[key].data.length,key,w.toDecimal(Math.abs(result[key].profit || 0),2)));
+                } 
+                source.push(w.format('<td>{0}</td><td><span>建仓：</span>{1}</td><td><span>多仓：</span>{2}</td><td><span>空仓：</span>{3}</td>',
+                    result[key].data[i].site,w.toDecimal(Math.abs(result[key].data[i].amount || 0),2),w.toDecimal(Math.abs(result[key].data[i].multipleWarehouse || 0),2),w.toDecimal(Math.abs(result[key].data[i].shortPosition || 0),2)));
+                source.push('</tr>');
             }
         }
-
-        $("#report").empty();
-        for(var key in result ){
-            var html ="<div style='border:1px solid #A9A9A9;width:50%;float:left;'><table><thead style='border-bottom:1px dashed #A9A9A9;'><tr><td>币种:<span style='color:red;'>" + key + 
-                "</span></td><td>总建仓:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].amount || 0),2) +
-                "</span>,</td><td>总多仓:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].multipleWarehouse || 0),2) +
-                "</span>,</td><td>总空仓:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].shortPosition || 0),2) +
-                    //result[key].profit需要正数转负数
-                "</span>,</td><td>总利润:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].profit || 0),2) +
-                "</span></td></tr></thead><tbody><tr><td colspan='5'>其中:</td></tr>";
-
-        
-            for(var i = 0; i<result[key].data.length;i++){
-                html+="<tr><td>网站:<span style='color:red;'>" +  result[key].data[i].site +
-                    "</span></td><td>建仓:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].data[i].amount || 0),2) +
-                    "</span>,</td><td>多仓:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].data[i].multipleWarehouse || 0),2) +
-                    "</span>,</td><td>空仓:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].data[i].shortPosition || 0),2) +
-                    "</span></td></tr>"; 
-            }
-
-            html+="</tbody></table></div>";
-            $("#report").append(html);
-        }  
+        $('#report').html(source.join('')); 
     }
 
-    //"</span>,</td><td>总利润:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].profit || 0),4) +
-        //<td>利润:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].data[i].profit || 0),4) + "</span></td>
+
 
     //分页页码
     function flexiGridInited(options) {
@@ -352,7 +376,7 @@
         return options;
     }
 
-    //这个很重要
+  
     function flexiGridLoaded(options){
         $('a[name="manualOperate"]').click(function(){
             var orderId = $(this).attr("data-orderId");
@@ -371,6 +395,15 @@
         });
     }
 
+    //操作函数
+    function formatMoney(value, pid) {
+
+        return "￥" + parseFloat(value).toFixed(2);
+
+    }
+
+    
+    
     //加载表格数据
     function flexiGridPreLoad(options){
         if(typeof options.orders == 'string'){
@@ -381,7 +414,6 @@
             _bargainAmountSum = JSON.parse(options.bargainAmountSum); 
             showReports();
         }
-        // showReports();
 
         var  data = {
             "page": options.page,
@@ -411,9 +443,9 @@
                     {"cellHtml": side},
                     {"cellHtml": w.toDecimal(Math.abs(order.amount || 0),4) },
                     {"cellHtml": order.price },
-                    {"cellHtml": w.toDecimal(Math.abs(order.bargainAmount || 0),4)},
-                    {"cellHtml": w.toDecimal(Math.abs(order.avgPrice || 0),3)},
-                    {"cellHtml": order.status}
+                    {"cellHtml": w.toDecimal(Math.abs(order.bargainAmount || 0),4) },
+                    {"cellHtml": w.toDecimal(Math.abs(order.avgPrice || 0),3) },
+                    {"cellHtml": order.status }
                 ]
             };
             data.rows.push(row);
@@ -447,7 +479,7 @@
         }
     }
 
-    function getItem(site,symbol){
+    function getItem(site,symbol,_symbolAmounts){
         var t,
             coinsPair = symbol.split('_')[0];
         for(var i = 0,l = _symbolAmounts.length; i< l ;i++){
@@ -461,8 +493,7 @@
             t = { site:site, symbol:coinsPair, amount: 0, middle: 0, multipleWarehouse: 0, shortPosition: 0 } //profit: 0,
             _symbolAmounts.push(t);
         }
-        
-        return t;  
+      return t;  
     }
 
 </script>
